--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,8 +19,14 @@ classifiers = [
     "Programming Language :: Python :: 3 :: Only",
     "Programming Language :: Python :: Implementation :: CPython",
 ]
+
 dependencies = [
-    "requests",
+    "requests >= 2.31.0",
+    "transformers >= 4.37.1",
+    "tokenizers >=  0.15.1",
+    "llama-index >= 0.9.36",
+    "langchain >= 0.1.3",
+    "llama-index-llms-huggingface"
 ]
 
 [project.urls]
