--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,7 +26,11 @@ dependencies = [
     "tokenizers >=  0.15.1",
     "llama-index >= 0.9.36",
     "langchain >= 0.1.3",
-    "llama-index-llms-huggingface"
+    "llama-index-llms-huggingface",
+    "llama-index-readers-file",
+    "bitsandbytes >= 0.42.0",
+    "sentence_transformers >= 2.2.2",
+    "llama-index-embeddings-langchain"
 ]
 
 [project.urls]
