--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,7 +30,9 @@ dependencies = [
     "llama-index-readers-file",
     "bitsandbytes >= 0.42.0",
     "sentence_transformers >= 2.2.2",
-    "llama-index-embeddings-langchain"
+    "llama-index-embeddings-langchain",
+    "llama-index-embeddings-huggingface"
+
 ]
 
 [project.urls]
