--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,7 +31,8 @@ dependencies = [
     "bitsandbytes >= 0.42.0",
     "sentence_transformers >= 2.2.2",
     "llama-index-embeddings-langchain",
-    "llama-index-embeddings-huggingface"
+    "llama-index-embeddings-huggingface",
+    "llama-index-vector-stores-faiss"
 
 ]
 
