--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,7 +32,8 @@ dependencies = [
     "sentence_transformers >= 2.2.2",
     "llama-index-embeddings-langchain",
     "llama-index-embeddings-huggingface",
-    "llama-index-vector-stores-faiss"
+    "llama-index-vector-stores-faiss",
+    "faiss-gpu >= 1.7.0",
 
 ]
 
@@ -149,14 +150,14 @@ select = [
     # ruff-specific
     "RUF",
 ]
-extend-ignore = []
+extend-ignore = ["COM812", "ISC001"]
 
 [tool.ruff.lint.flake8-pytest-style]
 parametrize-values-type = "tuple"
 
 [tool.ruff.lint.flake8-quotes]
 inline-quotes = "single"
-multiline-quotes = "single"
+multiline-quotes = "double"
 
 [tool.ruff.lint.isort]
 force-single-line = true
